fix(place): CodeRabbit 3차 피드백 반영 (Native Query 튜닝, 거리 필드 초기화, Redis 동시성 파이프라인)